Load_Balancing_with_ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  rules: 
   - host: www.scriptkkiddie.com
     http:
        paths:
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: searchd
                port:
                  number: 80
          - path: /mail
            pathType: Prefix
            backend:
              service:
                name: maild
                port:
                  number: 80
